--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       MYSQL_DATABASE: 'api_etudiant'
       MYSQL_ROOT_USERNAME: 'root'
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_ROOT_PASSWORD: '0000'
     ports:
       - '0.0.0.0:3306:3306'
     volumes:
